--- a/pom.xml
+++ b/pom.xml
@@ -83,6 +83,11 @@
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-thymeleaf</artifactId>
     </dependency>
+    
+    <dependency>
+    <groupId>com.fasterxml.jackson.datatype</groupId>
+    <artifactId>jackson-datatype-jsr310</artifactId>
+</dependency>
 
     <!-- Lombok for automatic getters, setters, constructors, etc. -->
     <dependency>
